test-suite/tests/roundtrip/invalid/semantic/typecheck/allDiff/02/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/allDiff/02/input.essence:2:35:
  |
2 | such that b = alldifferent_except(1, {1, 3, 4, 5})
  |                                   ^
Type error:
	Expected: "Matrix or list"
	Got: int

tests/roundtrip/invalid/semantic/typecheck/allDiff/02/input.essence:2:38:
  |
2 | such that b = alldifferent_except(1, {1, 3, 4, 5})
  |                                      ^^^^^^^^^^^^
Type error:
	Expected: "int enum or bool"
	Got: set of int

